# CCPFN-inference

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  admit.py  base.py  linear.py  semi_synthetic.py
benchmarks/scenarios/: __init__.py  admit.py  base.py
notebooks/: 01_example_usage.ipynb  02_warfarin_example.ipynb  example_usage.ipynb  notebook_setup.py
src/ccpfn/: __init__.py  continuous_causal_estimator.py  evaluation.py
src/ccpfn/benchmarks/: __init__.py  admit.py  base.py  csv_dataset.py  semi_synthetic.py
src/ccpfn/benchmarks/scenarios/: admit.py
src/ccpfn/models/: __init__.py  continuous_icl_model.py  loading.py  model.py  transformer_layer.py  utils.py
