[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccpfn"
version = "1.0.0"
description = "CCPFN: Causal Foundation Model for Continuous Treatments"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "huggingface-hub",
    "torch==2.5.1", 
    "tqdm",
    "matplotlib",
    "omegaconf",
]

[project.optional-dependencies]
tracking = ["wandb", "mlflow", "tensorboard"]
notebook = ["jupyter", "ipython"]
